@@ -2,6 +2,7 @@
 	* [SoundSystem] Returns false if the sound wasn't freed
 	* [Engine] Fixed rare 'bad command byte' error after executing a client command
 	* [RenderSystem] Statically allocated tr.images
+	* [Engine] Fixed few memory leaks
 
 2023-05-28 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Rewrote va function
